--- a/popup/popup.html
+++ b/popup/popup.html
@@ -15,7 +15,7 @@
         <button id="setBtn">Fake Date</button>
     </div>
 
-    <script src="./popup.js" type="module"></script>
+    <script src="./popup.ts" type="module"></script>
 </body>
 
 </html>
