fixed input size

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -9,7 +9,7 @@
 <body>
     <label>
         Date to set:
-        <input type="text" id="fakeDateInput" />
+        <input type="text" size="20" maxlength="20" id="fakeDateInput" />
     </label>
     <div class="buttonrow">
         <button id="resetBtn">Reset</button>
