--- a/popup/popup.html
+++ b/popup/popup.html
@@ -11,6 +11,7 @@
         Date to set:
         <input type="text" size="20" maxlength="20" id="fakeDateInput" />
     </label>
+    <p class="error--hidden" id="errormsg"></p>
     <div class="buttonrow">
         <button id="resetBtn">Reset</button>
         <button id="setBtn">Fake Date</button>
