--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -10,6 +10,9 @@
     <label>
         Date to set:
         <input type="text" size="20" maxlength="20" id="fakeDateInput" />
+        <div class="targetHint">for
+            <span class="targetHint__host" id="targetHost"></span>
+        </div>
     </label>
     <p class="error--hidden" id="errormsg"></p>
     <div class="buttonrow">
