--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -20,6 +20,7 @@
         <button id="setBtn">Fake Date</button>
     </div>
 
+    <div class="modal-background" id="modalBackground"></div>
     <div class="modal modal--hidden" id="reloadModal">
         <p class="modal__text">Almost ready! Please reload the page for the changes to take effect.</p>
         <button id="reloadBtn">Reload</button>
