--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -8,8 +8,8 @@
 
 <body>
     <label>
-        Date to set:
-        <input type="text" size="20" maxlength="20" id="fakeDateInput" />
+        Date and time to set:
+        <input type="text" size="20" maxlength="20" id="fakeDateInput" spellcheck="false" />
         <div class="targetHint">for
             <span class="targetHint__host" id="targetHost"></span>
         </div>
