set state symbols via css

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -12,7 +12,9 @@
             Date and time to set:
             <input type="text" size="20" maxlength="20" id="fakeDateInput" spellcheck="false" />
         </label>
-        <button id="tickToggleBtn">⏵</button>
+        <button id="tickToggleBtn">
+            <span class="tick-state"></span>
+        </button>
     </div>
     <div class="targetHint">for
         <span class="targetHint__host" id="targetHost"></span>
