rename action button

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -22,7 +22,7 @@
     <p class="error--hidden" id="errormsg"></p>
     <div class="row">
         <button id="resetBtn">Reset</button>
-        <button id="setBtn">Fake Date</button>
+        <button id="setBtn">Change Date</button>
     </div>
 
     <div class="modal-background" id="modalBackground"></div>
