prettier, date format in demo

--- a/src/test/demo.html
+++ b/src/test/demo.html
@@ -1,24 +1,28 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
 <head>
-    <title>Time and Date Demo</title>
-    <link rel="stylesheet" href="demo.css" />
+  <script>
+    console.log('page initializing...', new Date().toString())
+  </script>
+  <title>Time and Date Demo</title>
+  <link rel="stylesheet" href="demo.css" />
 </head>
 
 <body>
-    <div>
-        <h3> Current JavaScript Date & Time </h3>
-        <p id="now"></p>
-        <p id="nowIntl"></p>
-
-        <script>
-            setInterval(() => {
-                document.getElementById("now").textContent = new Date().toString().substring(0, 24)
-                document.getElementById("nowIntl").textContent = new Intl.DateTimeFormat('en-US', { dateStyle: 'full', timeStyle: 'medium' }).format()
-            }, 1000)
-        </script>
-    </div>
+  <div>
+    <h3>Current JavaScript Date & Time</h3>
+    <p id="now"></p>
+    <p id="nowIntl"></p>
+    
+    <script>
+      setInterval(() => {
+        document.getElementById('now').textContent = new Date().toString()
+        document.getElementById('nowIntl').textContent = new Intl.DateTimeFormat('en-US', {
+          dateStyle: 'full',
+          timeStyle: 'long',
+        }).format()
+      }, 1000)
+    </script>
+  </div>
 </body>
-
 </html>
