--- a/src/test/frames.html
+++ b/src/test/frames.html
@@ -1,30 +1,31 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+    <head>
+        <title>Time and Date Demo (With Frames)</title>
+        <link rel="stylesheet" href="./demo.css" />
+    </head>
 
-<head>
-    <title>Time and Date Demo (With Frames)</title>
-    <link rel="stylesheet" href="./demo.css" />
-</head>
+    <body>
+        <h2>iframe</h2>
+        <iframe src="demo.html" title="normal-frame"></iframe>
 
-<body>
-    <h2> iframe </h2>
-    <iframe src="demo.html" title="normal-frame"></iframe>
+        <h2>iframe (added with delay)</h2>
+        <div id="delayed-iframe"></div>
 
-    <h2> iframe (added with delay) </h2>
-    <div id="delayed-iframe"></div>
+        <script>
+            setTimeout(() => {
+                document.getElementById('delayed-iframe').innerHTML =
+                    '<iframe src="demo.html" title="frame-with-delay"></iframe>'
+            }, 1000)
+        </script>
 
-    <script>
-        setTimeout(() => {
-            document.getElementById("delayed-iframe").innerHTML = '<iframe src="demo.html" title="frame-with-delay"></iframe>'
-        }, 1000);
-    </script>
-
-    <h2>iframe (dynamic content) </h2>
-    <div id="dynamic-iframe"></div>
-    <script>
-        const iframe = document.createElement('iframe');
-        iframe.src = 'about:blank';
-        iframe.srcdoc = `
+        <h2>iframe (dynamic content)</h2>
+        <div id="dynamic-iframe"></div>
+        <script>
+            const iframe = document.createElement('iframe')
+            iframe.src = 'about:blank'
+            iframe.srcdoc =
+                `
             <link rel="stylesheet" href="./demo.css" />
             <div>
                 <h3> Current JavaScript Date & Time </h3>
@@ -36,17 +37,15 @@
                         document.getElementById("now").textContent = new Date().toString().substring(0, 24)
                         document.getElementById("nowIntl").textContent = new Intl.DateTimeFormat('en-US', { dateStyle: 'full', timeStyle: 'medium' }).format()
                     }, 1000)
-                <` + '/script></div>';
-        document.getElementById("dynamic-iframe").appendChild(iframe);
-    </script>
+                <` + '/script></div>'
+            document.getElementById('dynamic-iframe').appendChild(iframe)
+        </script>
 
-    <h2>iframe (sandbox with scripts + same-origin) </h2>
-    <iframe src="demo.html" sandbox="allow-scripts allow-same-origin" title="frame-sandbox-same-origin"></iframe>
+        <h2>iframe (sandbox with scripts + same-origin)</h2>
+        <iframe src="demo.html" sandbox="allow-scripts allow-same-origin" title="frame-sandbox-same-origin"></iframe>
 
-    <h2>iframe (sandbox with scripts) </h2>
-    <p><strong>Known to not work</strong></p>
-    <iframe src="demo.html" sandbox="allow-scripts" title="frame-sandbox"></iframe>
-
-</body>
-
+        <h2>iframe (sandbox with scripts)</h2>
+        <p><strong>Known to not work</strong></p>
+        <iframe src="demo.html" sandbox="allow-scripts" title="frame-sandbox"></iframe>
+    </body>
 </html>
