--- a/src/test/moment.js.html
+++ b/src/test/moment.js.html
@@ -1,25 +1,30 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+    <head>
+        <title>Time and Date Demo</title>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        ></script>
+        <link rel="stylesheet" href="demo.css" />
+    </head>
 
-<head>
-    <title>Time and Date Demo</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js" crossorigin="anonymous"
-        referrerpolicy="no-referrer"></script>
-    <link rel="stylesheet" href="demo.css" />
-</head>
-
-<body>
-    <div>
-        <h3>
-            moment.js compatibility test
-        </h3>
-        <p>moment():
-            <script> document.write(moment()); </script>
-        </p>
-        <p>endOf("day"):
-            <script> document.write(moment().endOf("day")); </script>
-        </p>
-    </div>
-</body>
-
+    <body>
+        <div>
+            <h3>moment.js compatibility test</h3>
+            <p>
+                moment():
+                <script>
+                    document.write(moment())
+                </script>
+            </p>
+            <p>
+                endOf("day"):
+                <script>
+                    document.write(moment().endOf('day'))
+                </script>
+            </p>
+        </div>
+    </body>
 </html>
