--- a/src/test/date-fns.html
+++ b/src/test/date-fns.html
@@ -14,15 +14,11 @@
                 import { TZDate, TZDateMini } from 'https://cdn.jsdelivr.net/npm/@date-fns/tz@1.1.2/+esm'
 
                 const test = new TZDate()
-                console.warn('test instance check:', {
-                    // when Time Travel is active this is: true
+                console.log('instance check (all of these should be true):', {
                     instanceOfDate: test instanceof Date,
-                    // when Time Travel is active this is: false!
                     instanceOfTZDate: test instanceof TZDate,
-                    // when Time Travel is active this is: false!
                     instanceOfTZDateMini: test instanceof TZDateMini,
                 })
-                console.log(test, test.__proto__)
 
                 document.getElementById('tzdate').textContent = test
                 document.getElementById('tzdate-utc').textContent = test.withTimeZone('UTC')
