--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -2,31 +2,10 @@
 <html lang="en">
     <head>
         <title>Set date</title>
-        <link rel="stylesheet" href="./popup.css" />
     </head>
 
     <body>
-        <div class="row">
-            <label>
-                Date and time to set:
-                <input type="text" size="28" maxlength="28" id="fakeDateInput" spellcheck="false" />
-            </label>
-            <button id="tickToggleBtn" title="Start/stop progressing clock from given value">
-                <span class="tick-state"></span>
-            </button>
-        </div>
-        <p class="error--hidden" id="errormsg"></p>
-        <div class="row">
-            <button id="resetBtn" title="Stop faking time and reset">Reset</button>
-            <button id="setBtn" title="Change time to the value entered">Change Date</button>
-        </div>
-
-        <div class="modal-background" id="modalBackground"></div>
-        <div class="modal modal--hidden" id="reloadModal">
-            <p class="modal__text">Almost ready! Please reload the page for the changes to take effect.</p>
-            <button id="reloadBtn">Reload</button>
-        </div>
-
-        <script src="./popup.ts" type="module"></script>
+        <div id="popup"></div>
+        <script src="./main.ts" type="module"></script>
     </body>
 </html>
