add links to other demos

--- a/src/test/demo.html
+++ b/src/test/demo.html
@@ -22,6 +22,15 @@
                     }).format()
                 }, 1000)
             </script>
+
+            <h3>Other Demos</h3>
+            <nav>
+                <ul>
+                    <li><a href="date-fns.html">date-fns Demo</a></li>
+                    <li><a href="moment.js.html">Moment.js Demo</a></li>
+                    <li><a href="frames.html">Frames Demo</a></li>
+                </ul>
+            </nav>
         </main>
     </body>
 </html>
