--- a/src/test/date-fns.html
+++ b/src/test/date-fns.html
@@ -20,6 +20,20 @@
                 document.getElementById('tzdate-utc').textContent = test.withTimeZone('UTC')
                 document.getElementById('tzdate-newyork').textContent = test.withTimeZone('America/New_York')
             </script>
+
+            <h3>date-fns-tz compatibility test</h3>
+            <p>toZonedTime(new Date(), 'America/New_York'): <span id="toZonedTime"></span></p>
+            <p>fromZonedTime('2025-03-09 01:00', 'America/New_York'): <span id="fromZonedTime"></span></p>
+
+            <script type="module">
+                import { toZonedTime, fromZonedTime } from 'https://cdn.jsdelivr.net/npm/date-fns-tz@3.0.0/+esm'
+
+                document.getElementById('toZonedTime').textContent = toZonedTime(new Date(), 'America/New_York')
+                document.getElementById('fromZonedTime').textContent = fromZonedTime(
+                    '2025-03-09 02:00',
+                    'America/New_York'
+                ).toISOString()
+            </script>
         </div>
     </body>
 </html>
