demo for showing current time in other TZ

--- a/src/test/date-fns.html
+++ b/src/test/date-fns.html
@@ -22,7 +22,10 @@
             </script>
 
             <h3>date-fns-tz compatibility test</h3>
-            <p>toZonedTime(new Date(), 'America/New_York'): <span id="toZonedTime"></span></p>
+            <p>
+                toZonedTime(new Date(), 'America/New_York'): <span id="toZonedTime"></span>
+                <strong>(ignore displayed timezone)</strong>
+            </p>
             <p>fromZonedTime('2025-03-09 01:00', 'America/New_York'): <span id="fromZonedTime"></span></p>
 
             <script type="module">
