Add demo for Date.parse()

--- a/src/test/demo.html
+++ b/src/test/demo.html
@@ -36,6 +36,7 @@
                     <li><a href="date-fns.html">date-fns Demo</a></li>
                     <li><a href="moment.js.html">Moment.js Demo</a></li>
                     <li><a href="frames.html">Frames Demo</a></li>
+                    <li><a href="date-parsing.html">Date String Parsing</a></li>
                 </ul>
             </nav>
         </main>
