--- a/src/test/moment.js.html
+++ b/src/test/moment.js.html
@@ -22,8 +22,8 @@
                 <span id="moment-end-of-day"></span>
             </p>
             <script>
-                document.getElementById('moment').textContent = moment()
-                document.getElementById('moment-end-of-day').textContent = moment().endOf('day')
+                document.getElementById('moment').textContent = moment();
+                document.getElementById('moment-end-of-day').textContent = moment().endOf('day');
             </script>
         </div>
     </body>
